terminado curso css

--- a/texto.html
+++ b/texto.html
@@ -9,27 +9,27 @@
         <meta name="keywords" content="Mi primer título, mi primer página web" />
         <link rel = "stylesheet" href="estilos.css">
         <style>
-            #cabecera {                
+            /* #cabecera {                
                 background: red;
             }
             footer{
                 background: green
-            }
+            }       
 
             green{
 
                 background: green;
             }
-/* 
+
             *{
 
                 background: green;
-            } */
+            } 
 
             blockquote[cite]{
                 background: red;
             
-            }
+            } */
 
 
 
